--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="circle">all</div>   
     
     <div class="section">
-        <div class="left"><h1>new</h1>
+        <div class="left"><h1>left side</h1>
         </div>
         <div class="right"><h1>content</h1>
         </div>
